force-app/main/default/objects/Before_Save_Single_Flow_Multi_Update__c/Before_Save_Single_Flow_Multi_Update__c.object-meta.xml
<CustomObject>
    <label>Before Save Single Flow Multi Update</label>
    <nameField>
        <displayFormat>BSSFMU {000000}</displayFormat>
        <label>Before Save Single Flow Multi Update Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Before Save Single Flow Multi Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>