force-app/main/default/objects/Before_Save_Single_Flow_Multi_Update__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <type>TextArea</type>
</CustomField>