force-app/main/default/objects/Before_Save_Single_Flow_Multi_Update__c/fields/Field_3__c.field-meta.xml
<CustomField>
    <fullName>Field_3__c</fullName>
    <label>Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>