force-app/main/default/objects/Before_Save_Single_Flow_Multi_Update__c/fields/Field_4__c.field-meta.xml
<CustomField>
    <fullName>Field_4__c</fullName>
    <label>Field 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>